Restore original hero headline copy

--- a/index.html
+++ b/index.html
@@ -3392,15 +3392,12 @@
             <div class="container">
                 <div class="hero-content">
                     <h1>
-                        <span class="hero-title-desktop">
-                            <span class="hero-title-line">Signature Garden Care</span>
-                            <span class="hero-title-accent">Crafted for Tameside Homes</span>
-                        </span>
-                        <span class="hero-title-mobile">Signature Garden Care</span>
+                        <span class="hero-title-desktop">Garden Maintenance Service</span>
+                        <span class="hero-title-mobile">Garden Maintenance</span>
                     </h1>
-                    <p>Meticulous mowing, hedge shaping, and seasonal tidy-ups with quotes that stay free and friendly.</p>
+                    <p>Probably the best rates in Tameside.</p>
                     <div class="hero-actions">
-                        <a href="#booking" class="btn">Book a Free Quote Visit</a>
+                        <a href="#booking" class="btn">Get a Free Quote</a>
                         <a href="#services" class="btn btn-secondary">Our Services</a>
                     </div>
                 </div>
@@ -3410,15 +3407,12 @@
             <div class="container">
                 <div class="hero-content">
                     <h1>
-                        <span class="hero-title-desktop">
-                            <span class="hero-title-line">Precision Garden Detailing</span>
-                            <span class="hero-title-accent">Personal Service, Local Expertise</span>
-                        </span>
-                        <span class="hero-title-mobile">Precision Garden Detailing</span>
+                        <span class="hero-title-desktop">Garden Maintenance Service</span>
+                        <span class="hero-title-mobile">Garden Maintenance</span>
                     </h1>
-                    <p>Bespoke trims, border care, and expert advice before any work begins — we always visit to quote first.</p>
+                    <p>Detailed border care, weeding, and mowing tailored to your garden.</p>
                     <div class="hero-actions">
-                        <a href="#booking" class="btn">Book a Free Quote Visit</a>
+                        <a href="#booking" class="btn">Get a Free Quote</a>
                         <a href="#services" class="btn btn-secondary">Our Services</a>
                     </div>
                 </div>
