--- a/index.html
+++ b/index.html
@@ -3877,7 +3877,7 @@
                 <div class="footer-column">
                     <h3>Contact Info</h3>
                     <ul class="footer-links">
-                        <li><i class="fas fa-map-marker-alt"></i> 123 Garden Street, Greenville</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Leech Brook Close, Audenshaw, Manchester</li>
                         <li><i class="fas fa-phone"></i> <a href="tel:+447595289669">07595 289 669</a></li>
                         <li><i class="fas fa-envelope"></i> info@payasyoumow.com</li>
                     </ul>
