--- a/index.html
+++ b/index.html
@@ -3878,7 +3878,7 @@
                     <h3>Contact Info</h3>
                     <ul class="footer-links">
                         <li><i class="fas fa-map-marker-alt"></i> <a href="https://maps.google.com/?q=Leech+Brook+Close,+Audenshaw,+Manchester" target="_blank" rel="noopener">Leech Brook Close, Audenshaw. Manchester</a></li>
-                        <li><i class="fas fa-phone"></i> <a href="tel:+447595289669">07595 289 669</a></li>
+                        <li><i class="fas fa-phone"></i> <a href="tel:07595289669">07595 289 669</a></li>
                         <li><i class="fas fa-envelope"></i> info@payasyoumow.com</li>
                     </ul>
                 </div>
